# pdf-gen-prototype

./: .gitignore  README.md  pyproject.toml
data/: ark+=13960=t9x05z201.mets.xml  c3263821.mets.xml
data/ark+=13960=t9x05z201/: 00000001.xml  00000002.jp2  00000004.xml  00000005.txt  00000005.xml  00000006.xml  00000007.jp2  00000008.jp2  00000008.xml  00000009.jp2  00000009.xml  00000010.txt  00000011.jp2  00000011.txt  00000013.txt  00000014.txt  00000014.xml  00000015.xml  00000016.jp2  00000016.txt  00000016.xml  00000017.jp2  00000017.xml  00000018.txt  00000019.txt  00000020.txt  00000020.xml  00000021.txt  00000021.xml  00000022.jp2  00000022.txt  00000022.xml  00000023.jp2  00000024.jp2  00000024.txt  00000024.xml  00000025.txt  00000025.xml  00000026.txt  00000026.xml  (+35 more)
data/c3263821/: UCAL_C3263821.xml  UCAL_C3263821_00000001.html  UCAL_C3263821_00000001.jp2  UCAL_C3263821_00000002.jp2  UCAL_C3263821_00000003.html  UCAL_C3263821_00000003.jp2  UCAL_C3263821_00000003.txt  UCAL_C3263821_00000004.html  UCAL_C3263821_00000004.tif  UCAL_C3263821_00000005.html  UCAL_C3263821_00000005.txt  UCAL_C3263821_00000006.html  UCAL_C3263821_00000006.txt  UCAL_C3263821_00000007.html  UCAL_C3263821_00000007.tif  UCAL_C3263821_00000007.txt  UCAL_C3263821_00000008.html  UCAL_C3263821_00000009.txt  UCAL_C3263821_00000010.html  UCAL_C3263821_00000011.html  UCAL_C3263821_00000012.html  UCAL_C3263821_00000012.tif  (+100 more)
pdf_gen/: __init__.py  djvu_generator.py  mets_parser.py  ocr_combine.py  ocr_dir.py  page_generator.py  tag_pdf.py
tests/: djvu_generator_test.py
tests/data/: djvu.xml
(+158 files in other folders)
